<resources>
    <string name="app_name">SnowAlert</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome to SnowAlert</string>
    <string name="welcome_message">Please register to a resort to get notifications</string>
    <string name="register">Register</string>
    <string name="download_resorts">Downloading available resorts from server</string>
    <string name="actual_alarm">Actual</string>
    <string name="historic_alarm">Historic</string>
    <string name="settings">Settings</string>
    <string name="no_alarms_actual">There are no alarms to display</string>
    <string name="use_calendar">Use calendar events to Mute Notifications</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="dnd_from">From:</string>
    <string name="dnd_to">To:</string>
    <string name="or">Or</string>
    <string name="connection_timeout">"No connection to the Server could be established! Please make sure you're connected to internet and try again later"</string>
    <string name="reset_app">Reset application</string>
    <string name="alert">Attention</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="botclient_status">BotClient status</string>
    <string name="reset_app_message">Do you really want to reset the application?</string>
    <string name="reset_app_unregister">Unregister from resort?</string>
    <string name="unregistering">Unregistering from resort. Please wait...</string>


    <string name="title_activity_web">WebActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_web_fullscreen">WebFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
